force-app/main/default/objects/Flight__c/Flight__c.object-meta.xml
<CustomObject>
    <description>Manage the flight data in this objects</description>
    <label>Flight</label>
    <nameField>
        <displayFormat>FMS-{00000}-{DD}-{MM}{YY}</displayFormat>
        <label>Flight ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Flights</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>