force-app/main/default/objects/Flight__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <label>Company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kingfisher</fullName>
            </value>
            <value>
                <fullName>Go Air</fullName>
            </value>
            <value>
                <fullName>Indigo</fullName>
            </value>
            <value>
                <fullName>Air India</fullName>
            </value>
            <value>
                <fullName>Tata Visara</fullName>
            </value>
            <value>
                <fullName>Emirates</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>