force-app/main/default/objects/Flight__c/fields/Departure_Date__c.field-meta.xml
<CustomField>
    <fullName>Departure_Date__c</fullName>
    <label>Departure Date and time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>