force-app/main/default/objects/Flight__c/fields/Departure_Location__c.field-meta.xml
<CustomField>
    <fullName>Departure_Location__c</fullName>
    <label>Departure Location</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>