force-app/main/default/objects/Flight__c/fields/Flight_Name__c.field-meta.xml
<CustomField>
    <fullName>Flight_Name__c</fullName>
    <label>Flight Name</label>
    <length>10</length>
    <type>Text</type>
</CustomField>