force-app/main/default/objects/Flight__c/fields/Internation_Domestic__c.field-meta.xml
<CustomField>
    <fullName>Internation_Domestic__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Active check box for domestic</inlineHelpText>
    <label>Internation / Domestic</label>
    <type>Checkbox</type>
</CustomField>