force-app/main/default/objects/Flight__c/validationRules/Departure_Before_Arrival.validationRule-meta.xml
<ValidationRule>
    <fullName>Departure_Before_Arrival</fullName>
    <active>true</active>
    <errorConditionFormula>Departure_Time__c  &gt;=  Arrival_Time__c</errorConditionFormula>
    <errorMessage>Departure time must be earlier than arrival.</errorMessage>
</ValidationRule>